Developer/src/objects/program_req__c.object
<CustomObject>
    <fields>
        <fullName>ContractName__c</fullName>
        <formula>cycle_name__r.contractnumber_cycle__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Sent_Rule__c</fullName>
        <label>ＤＢ送信日条件</label>
        <picklist>
            <picklistValues>
                <fullName>絶対 本日に送信</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>絶対 △△日に送信</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>△△日 までに送信</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Sent__c</fullName>
        <label>DB送信希望日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <formula>cycle_name__r.contractnumber_cycle__r.opportunity_cdb__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>案件名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WCheck1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wチェック１</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cycle_name__c</fullName>
        <label>CycleDB</label>
        <referenceTo>cycleDB__c</referenceTo>
        <relationshipLabel>ProgramReq</relationshipLabel>
        <relationshipName>ProgramReq</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ProgramReq</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>ProgramReq名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>